// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonContent renders correctly with defaults 1`] = `
.emotion-2 {
  height: 6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
}

.emotion-0 {
  color: white;
  text-transform: uppercase;
  position: absolute;
  top: 8px;
  left: 8px;
  font-size: 1rem;
}

.emotion-1 {
  color: #626262;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
}

<ButtonContent
  fieldLabel={null}
  icon={null}
  largeValue={null}
  placeHolder={null}
  smallValue={null}
>
  <div
    className="emotion-2"
  >
    <span
      className="emotion-0"
    />
    <div
      className="emotion-1"
    />
  </div>
</ButtonContent>
`;

exports[`ButtonContent renders correctly with props provided 1`] = `
.emotion-3 {
  height: 6rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 100%;
}

.emotion-0 {
  color: white;
  text-transform: uppercase;
  position: absolute;
  top: 8px;
  left: 8px;
  font-size: 1rem;
}

.emotion-1 {
  color: #fff;
  font-size: 2.25rem;
  -webkit-letter-spacing: -0.0625rem;
  -moz-letter-spacing: -0.0625rem;
  -ms-letter-spacing: -0.0625rem;
  letter-spacing: -0.0625rem;
}

.emotion-2 {
  color: #fff;
  font-size: 1.125rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

<ButtonContent
  fieldLabel="Departing"
  icon={
    <div>
      ICON
    </div>
  }
  largeValue="MEL"
  placeHolder="Departing From?"
  smallValue="Melbourne, Australia"
>
  <div
    className="emotion-3"
  >
    <span
      className="emotion-0"
    >
      Departing
    </span>
    <div
      className="emotion-1"
    >
      MEL
    </div>
    <div
      className="emotion-2"
    >
      Melbourne, Australia
    </div>
  </div>
</ButtonContent>
`;
